2009-11-01  Ulrich Drepper  <drepper@redhat.com>

	* malloc/hooks.c (free_check): Restore locking and call _int_free
	appropriately.

2009-10-30  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump for 2.11 release.
	* include/features.h (__GLIBC_MINOR__): Bump to 11.

	* elf/tst-execstack.c (do_test): Add cast to avoid warning.

	* stdio-common/scanf13.c (main): Remove unused variable wbuf.

	* stdlib/tst-strtol.c (tests): Mark one more constant as unsigned
	to avoid warning.
	* stdlib/tst-strtoll.c (tests): Likewise.

	[BZ #9986]
	* time/strftime_l.c (__strftime_internal): Allow %OC.

	* misc/mkostemps.c: New file.
	* misc/mkostemps64.c: New file.

2009-10-30  Andreas Schwab  <schwab@redhat.com>

	* locale/programs/locale-spec.c: Include <error.h> and
	<libintl.h>.

	* sysdeps/unix/sysv/linux/readlinkat.c: Fix last change.

2009-10-28  Roland McGrath  <roland@redhat.com>

	* Makefile (dist-prepare): New target.
	(tag-for-dist): Target removed.
	(glibc-%.tar): Pattern rule removed.
	(%.tar): New pattern rule, does simple use of git archive.
	(dist-version): Remove variable definition.
	(dist): Just depend on that.  Add .tar.xz dependency.
	If dist-version variable not set on command line, depend on
	dist-prepare, re-invoke with dist-version set via git describe.

	* Makerules (%.xz): New pattern rule.

2009-10-28  Alan Modra  <amodra@bigpond.net.au>

	* elf/ifuncdep2.c: Include ifunc-sel.h.
	(global): Delete.
	(foo1_ifunc, foo2_ifunc, foo3_ifunc): Use ifunc_sel.
	* elf/ifuncmain1.c (global): Delete.
	* elf/ifuncmain1vis.c: Likewise.
	* elf/ifuncmain2.c: Likewise.
	* elf/ifuncmain5.c: Likewise.
	* elf/ifuncmod3.c: Likewise.
	* elf/ifuncmain6pie.c: Include ifunc-sel.h.
	(foo_ifunc): Use ifunc_one.
	* elf/ifuncmain7.c: Likewise.
	* elf/ifuncmod1.c: Include ifunc-sel.h.
	(global): Define protected var.
	(foo_ifunc, foo_hidden_ifunc, foo_protected_ifunc): Use ifunc_sel.
	* elf/ifuncmod5.c: Likewise.
	* sysdeps/generic/elf/ifunc-sel.h: New file.