@@ -1,3 +1,9 @@
+2009-11-03  Andreas Schwab  <schwab@linux-m68k.org>
+
+	[BZ #4457]
+	* sysdeps/generic/libgcc_s.h: New file.
+	* sysdeps/generic/framestate.c: Include it and use LIBGCC_S_SO.
+
 2009-11-01  Ulrich Drepper  <drepper@redhat.com>
 
 	* malloc/hooks.c (free_check): Restore locking and call _int_free
